--- a/app/src/main/res/layout/my_photo.xml
+++ b/app/src/main/res/layout/my_photo.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="12dp"
-    android:background="#423232">
+    android:background="#423232"
+    app:cardCornerRadius="12dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:padding="8dp"
-        android:orientation="vertical"
+        android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_height="wrap_content">
+        android:orientation="vertical"
+        android:padding="8dp">
 
         <ImageView
             android:id="@+id/imageView"
@@ -25,11 +24,12 @@
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
-            android:gravity="center"
             android:layout_height="wrap_content"
-            android:layout_margin="1dp"
-            android:padding="8dp"
-            tools:text="sal;kdfskdflksdfklsdf;lksdf"
-            android:textStyle="bold|italic" />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:padding="18dp"
+            android:textStyle="bold|italic"
+            tools:text="sal;kdfskdflksdfklsdf;lksdf" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
